# RTComp

./: .gitignore  CMakeLists.txt  README.md  external_funcs.yaml
bench/: README.md  audio_dsp.cpp  run_benchmark.sh
bench/audio_target/: audio_target.cpp  audio_target_full.cpp  audio_target_stubs.cpp
clang_plugin/: CMakeLists.txt  RTAttrPlugin.cpp
include/RTEffect/: EffectSummary.h  ExternalFuncTable.h  Passes.h
lib/: EffectSummary.cpp  ExternalFuncTable.cpp  RTConstraintCheckPass.cpp  RTEffectInferPass.cpp  RTEffectPlugin.cpp  RTSanPlacementPass.cpp
rtsan_runtime/: rtsan_shim.c
rust_attr/: Cargo.toml
rust_attr/rt/: Cargo.toml
rust_attr/rt/src/: lib.rs
rust_attr/rt_attr/: Cargo.toml
rust_attr/rt_attr/src/: lib.rs
scripts/: bench_audio_matrix.sh  bench_wall_time.sh  demo.sh  eval_audio.sh  eval_audio_full.sh  fetch_audio_headers.sh  run_cross_lang.sh  run_rt_effect.sh
test/: audio_target.ll  check_json_diagnostics.py  clang_attr_plugin.cpp  constraint_check.ll  cross_lang_violation.ll  direct_alloc.ll  direct_block.ll  effect_kinds.ll  export_yaml.ll  heap_global.ll  heap_json_diag.ll  heap_normal.ll  heap_rt_safe.ll  heap_stack.ll  heap_transitive.ll  helper_chain.ll  indirect_call.ll  indirect_resolved.ll  instrument_all.ll  json_diagnostics.ll  lit.cfg  metadata_roundtrip.ll  percallsite_instrument.ll  percallsite_multi_witness.ll  poly_callback.ll  real_rtsan_link.ll  recursion_effect.ll  region_scope.ll  rtsan_shim_compile.c  rust_attr_annotated.ll  sarif_output.ll  selective_instrument.ll  stack_depth.ll  unknown_constraint.ll  unwind_instrument.ll
test/Inputs/: instrument_all_baseline.c  rt_alloc_violation.c  rt_block_violation.c  rt_helper_chain.c  rt_safe.c
test/cross_lang/: cpp_rt_caller.cpp  rust_lib.rs
test/rust_attr/: Cargo.toml
test/rust_attr/src/: main.rs
